[feat] 有关scrollbar被隐藏掉的，放开显示出来 related to issue #13

--- a/components/auto-complete/style/index.styl
+++ b/components/auto-complete/style/index.styl
@@ -54,8 +54,6 @@ auto-complete-prefix = pilipa-prefix + '-auto-complete'
       overflow-y: scroll
       margin: 0
       padding: 0
-      &::-webkit-scrollbar
-        width: 0
     ul
       margin: 0
       padding: 0
