--- a/components/dropdown/style/index.styl
+++ b/components/dropdown/style/index.styl
@@ -70,8 +70,8 @@ dropdown-prefix = pilipa-prefix + '-dropdown'
       overflow-y: scroll
       margin: 0
       padding: 0
-      &::-webkit-scrollbar
-        width: 0
+      // &::-webkit-scrollbar
+      //   width: 0
       ul
         margin: 0
         padding: 0
